--- a/EasyRent/app/src/main/res/values/strings.xml
+++ b/EasyRent/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="user_pasword">Enter your Password</string>
     <string name="signup">New Here??Signup!!</string>
     <string name="sign_in">Sign In</string>
-
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
