--- a/EasyRent/app/src/main/res/values/strings.xml
+++ b/EasyRent/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="sign_in">Sign In</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string-array name="houseTypeArray">
+        <item>Single Seat</item>
+        <item>Full Flat</item>
+
+    </string-array>
+
 </resources>
